<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RemoteControl</string>
    <string name="settings">Settings</string>
    <string name="keyboard_send">Envoyer</string>
    <string name="keyboard">Keyboard</string>
    <string name="connection_button">Connect</string>
    <string name="main_connexion_button">Connexion Serveur</string>
    <string name="main_basic_button">Clavier/Souris</string>
    <string name="main_projo_text">Projecteur</string>
    <string name="projo_onoff">On/Off</string>
    <string name="projo_status">Status</string>
    <string name="servicedialog_title">Connexion</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="networkdialog_network">Choisir Réseau</string>
    <string name="networkdialog_device">Choisir Appareil</string>
    <string name="right_clic">Clic droit</string>
    <string name="left_clic">Clic gauche</string>
    <string name="test">Test</string>
    <string name="init_button">Initialisation</string>
    <string name="no_tcp_service">Pas connecté à un PC</string>
    <string name="waiting_string">Recherche de serveur</string>
    <string name="no_server_found">Aucun serveur trouvé</string>
    <string name="server_found">Connecté !</string>
    <string name="menu_dc">Déconnexion</string>
    <string name="dc">Déconnecté</string>
    <string name="source">Source</string>
    <string name="source_pc">Ordinateur</string>
    <string name="source_HDMI">HDMI</string>
    <string name="source_video">Video</string>
    <string name="getsource">Obtenir source</string>
    <string name="source_title">Connexion</string>
    <string name="titre_theme">Choix du theme</string>
    <string name="lightTheme">Light Theme</string>
    <string name="egg_leet">8!3(\)\/3(\)3</string>
    <string name="egg_pi">C\'est π !</string>
    <string name="egg_or">C\'est le nombre d\'or !</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="diapo_aller_a">Aller à la page :</string>
    <string name="diapo_go">Go !</string>
    <string name="precedent">Précédent</string>
    <string name="demarrer">Démarrer</string>
    <string name="suivant">Suivant</string>
    <string name="debut">Début</string>
    <string name="fin">Fin</string>
    <string name="diapo_demarrer_page_courante">Démarrer à la page courante</string>
    <string name="main_diapo_text">Diaporama</string>
    <string name="diapo_text_null">Besoin d\'un numéro de page</string>
    <string name="crd">Application réalisée par :\nCorentin Colomier\nValentin Jubert\nCyprien Ruffino\nNicolas
        Serrette
    </string>
    <string name="credit">Crédits</string>
    <string name="pause">Pause</string>
    <string name="play">Lecture</string>
    <string name="volup">Volume +</string>
    <string name="voldown">Volume -</string>
    <string name="mute">Muet</string>
    <string name="fullscreen">Plein écran</string>
    <string name="stop">Stop</string>
    <string name="playpause">Lecture / Pause</string>
    <string name="avance">Avancer</string>
    <string name="recule">Reculer</string>
    <string name="play_pause">Lecture/Pause</string>
    <string name="main_media_text">Lecteur Multimedia</string>
    <string name="theme">Thème</string>
    <string name="port">Changer port</string>
    <string name="valider">Valider</string>
    <string name="port_label">Cela va redémarrer les communications en cours !</string>
    <string name="port_needed">Besoin d\'un numéro de port</string>
    <string name="shell_send">Go</string>
    <string name="shell_text">Terminal</string>
    <string name="annuler">Annuler</string>
    <string name="defaut">Défaut</string>
</resources>
