<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      style="@style/VerticalLinearLayout">
    <TextView
            style="@style/MatchParent"
            android:layout_weight="1"
        android:id="@+id/connexion_txtView"/>
    <Button
            style="@style/MatchParent"
            android:layout_weight="1"
        android:onClick="init"
        android:text="@string/init_button"
        />
    <Button
            style="@style/MatchParent"
            android:layout_weight="1"
        android:onClick="connexion"
        android:text="@string/connection_button"
        />
     <Button
            style="@style/MatchParent"
            android:layout_weight="1"
        android:onClick="test"
        android:text="@string/test"
        />
</LinearLayout>